Closed Bug 915487 Opened 12 years ago Closed 12 years ago

Error handling for GonkDisplayJB

Categories

(Core Graveyard :: Widget: Gonk, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla26

People

(Reporter: vlin, Assigned: vlin)

Details

Attachments

(1 file)

Recently we're matching more and more platforms. This patch is to prevent unexpected error returned from HAL.
Component: General → Widget: Gonk
Product: Boot2Gecko → Core
Attachment #803459 - Flags: review?(mwu)
Comment on attachment 803459 [details] [diff] [review] bug-915487-fix.patch Looks good.
Attachment #803459 - Flags: review?(mwu) → review+
Keywords: checkin-needed
https://hg.mozilla.org/integration/b2g-inbound/rev/7525021852e0 Please use your full name in the hg commit information (bonus points for using it in bugzilla as well).
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: