Bug 915487 - Error handling for GonkDisplayJB. r=mwu